plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.3'
    id 'org.jetbrains.kotlin.jvm' version '2.1.20'
    id "io.papermc.paperweight.userdev" version "2.0.0-beta.14"
    id 'maven-publish'
}

group = 'com.al3x'
version = '1.0'

repositories {
    mavenCentral()
    mavenLocal()
    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url 'https://oss.sonatype.org/content/groups/public/' }
    maven { url 'https://repo.onarandombox.com/content/groups/public/' }
    maven { url 'https://maven.citizensnpcs.co/repo' }
    maven { url 'https://repo.infernalsuite.com/repository/maven-snapshots/' }
    maven { url 'https://repo.rapture.pw/repository/maven-releases/' }
    maven { url 'https://repo.dmulloy2.net/repository/public/' }
    maven { url 'https://jitpack.io' }
    maven {
        name = 'papermc'
        url  = uri('https://repo.papermc.io/repository/maven-public/')
    }
    maven { url 'https://repo.extendedclip.com/releases/' }
    maven { url uri('https://repo.codemc.io/repository/maven-releases/') }
    maven { url uri('https://repo.codemc.io/repository/maven-snapshots/') }
    maven { url 'https://jitpack.io' }
    maven { url 'https://catcoder.pl.ua/snapshots' }
    maven { url 'https://repo.nexomc.com/releases' }
    maven { url 'https://maven.maxhenkel.de/repository/public' }
    maven {
        name = 'redstoneReleases'
        url  = 'https://repo.redstone.llc/releases'
    }
    maven { url 'https://repo.xenondevs.xyz/releases' }
}

dependencies {
    implementation project(':common')
    implementation('wtf.choco:networking-bukkit:0.1.1') {
        exclude group: 'org.spigotmc', module: 'spigot-api'
    }
    paperweight.paperDevBundle('1.21.4-R0.1-SNAPSHOT')
    compileOnly('net.citizensnpcs:citizensapi:2.0.37-SNAPSHOT') { transitive = false }
    compileOnly('net.citizensnpcs:citizens-main:2.0.37-SNAPSHOT') { transitive = false }
    implementation 'com.google.code.gson:gson:2.11.0'
    compileOnly 'com.infernalsuite.asp:api:4.0.0-SNAPSHOT'
    implementation 'com.infernalsuite.asp:file-loader:4.0.0-SNAPSHOT'
    compileOnly 'com.github.retrooper:packetevents-spigot:2.7.0'
    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
    implementation('com.github.maximjsx:HologramLib:1.7.1') {
        exclude group: 'me.tofaa.entitylib', module: 'spigot'
    }
    implementation 'com.github.Tofaa2.EntityLib:api:2.4.11'
    implementation files('../libs/PacketWrapper.jar')
    compileOnly files('../libs/AxiomPaper.jar')
    compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0'
    compileOnly 'me.clip:placeholderapi:2.11.6'
    implementation 'com.github.ShieldCommunity:SternalBoard:84b5137622'
    compileOnly 'de.maxhenkel.voicechat:voicechat-api:2.5.27'
    implementation('net.dv8tion:JDA:5.3.0') { // replace $version with the latest version
        // Optionally disable audio natives to reduce jar size by excluding `opus-java`
        // Gradle DSL:
         exclude module: 'opus-java'
        // Kotlin DSL:
        // exclude(module="opus-java")
    }

    // resource packs
    implementation 'io.jooby:jooby:3.6.1'
    implementation 'io.jooby:jooby-netty:3.6.1'

    // note block
    compileOnly 'com.github.koca2000:NoteBlockAPI:1.6.2'

    // items adder
    compileOnly 'com.github.LoneDev6:API-ItemsAdder:3.6.1'

    // heads
    compileOnly 'com.arcaniax:HeadDatabase-API:1.3.2'

    // LuckPerms
    compileOnly 'net.luckperms:api:5.4'

    // Mongo !!?!?!?!?!
    implementation 'org.mongodb:mongodb-driver-sync:5.3.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    // Json?
    implementation 'org.json:json:20250107'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

def defaultOutput = layout.buildDirectory.dir('libs').get().asFile
//You can put this in your local gradle.properties file
def outputLocation = project.hasProperty('outputLocation')
             ? file(project.property('outputLocation'))
             : defaultOutput

tasks.register('copyJarToLocation', Copy) {
    from tasks.named('shadowJar').flatMap { it.archiveFile }
    into outputLocation
}

kotlin {
    jvmToolchain(21)
}

test {
    useJUnitPlatform()
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

publishing {
    publications {
        create('mavenJava', MavenPublication) {
            groupId = 'com.al3x'
            artifactId = 'Playground'
            version = project.findProperty('commit') ?: System.getenv('COMMIT') ?: version
            //noinspection GroovyAssignabilityCheck
            from components.java
        }
    }
    repositories {
        maven {
            name = 'playgroundRepo'
            url  = uri('https://repo.redstone.llc/playground')
            credentials(PasswordCredentials)
            authentication {
                create("basic", BasicAuthentication)
        }
    }
  }
}
